examples/test/testpolicy18812.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18812
  namespace: namespace446
spec:
  podSelector:
    matchLabels:
      key42: value10
      key26: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value12
      podSelector:
        matchLabels:
          key20: value36
          key24: value4
